# Task-Manager-Collection

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Pipfile  entrypoint.sh  requirements.txt  startup.sh  update_db.sh
backend/API/: __init__.py  urls.py
backend/API/settings/: common.py  docker.py  local.py
backend/app/: filters.py  permissions.py  urls.py
backend/core/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/docs/: TODO.txt
django/: README.md
django-drf/: README.md  docker-compose.yml
django-drf/backend/: .gitignore  Dockerfile  Pipfile  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt  update_db.sh
django/backend/: Pipfile  manage.py  startup.sh
fast api/: .gitignore  Pipfile  README.md  docker-compose.yml  main.py  settings.py
fast api/alembic/: env.py
fast api/api/: main.py  settings.py
fast api/app/: main.py  schemas.py
fast api/db/: initialization.py
fastapi/: Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
fastapi-async/: .gitignore  Pipfile  README.md  alembic.ini  docker-compose.yml
fastapi-async/app/: main.py
fastapi-sync/: .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
fastapi-sync/alembic/: env.py
fastapi-sync/app/: main.py
fastapi-sync/tests/: test_api.py
fastapi/alembic/: env.py
fastapi/app/: main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  Layout.jsx
rust/: Cargo.toml
rust/src/: main.rs
(+242 files in other folders)
