[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[dependencies]  
actix-web = "4"        
serde = { version = "1.0", features = ["derive"] }  # Indicates that you want to use the derive feature for serde  
serde_json = "1.0"     # Optional: for JSON serialization/deserialization  
tokio = { version = "1", features = ["full"] }